updates + async + promises

--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,8 @@
-<script type="text/javascript"></script>
-<form method="get" action="/search">
-  <input class="q tt-query" spellcheck="false" autocomplete="off" name="q" type="text" />
-  <input type="submit" value="Search" class="submitButton">
-</form>
+<html>
+  <script type="text/javascript"></script>
+  <h1>Enter search term</h1>
+  <form method="get" action="/search">
+    <input class="q tt-query" spellcheck="false" autocomplete="off" name="q" type="text" />
+    <input type="submit" value="Search" class="submitButton">
+  </form>
+</html>
