--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
     <% } %>
 
   <% if(results !== null) { %>
+    <p>Recieved results in <%- resTime %> ms</p>
     <p><%- results %></p>
   <% } %>
   <!-- <form>
