--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     <% } %>
 
   <% if(results !== null) { %>
-    <p>Recieved results in <%- resTime %> ms</p>
+    <p>Recieved results in <strong><%- resTime %> ms</strong></p>
     <p><%- results %></p>
   <% } %>
   <!-- <form>
